--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">		
-		<script src="/charting_library/charting_library.js"></script>
-		<title>Charting Library React Demo</title>
-	</head>
-	<body>
-		<noscript>
-			You need to enable JavaScript to run this app.
-		</noscript>
-		<div id="root"></div>
-		<!--
+  <head>
+    <meta charset="utf-8" />
+    <script src="/charting_library/charting_library.js"></script>
+    <title>Charting Library React Demo</title>
+    <script>
+		var chart_data=[];
+      window.addEventListener("message", (event) => {
+        // Do we trust the sender of this message?
+        if (event.origin !== "http://test.tradeasy.tech") return;
+		chart_data.push(JSON.parse(event.data));
+      });
+    </script>
+  </head>
+  <body>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
+    <div id="root"></div>
+    <!--
 			This HTML file is a template.
 			If you open it directly in the browser, you will see an empty page.
 
@@ -19,6 +25,5 @@
 
 			To begin the development, run `npm start`.
 			To create a production bundle, use `npm run build`.
-		-->
-	</body>
+		--></body>
 </html>
