--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
       window.addEventListener("message", (event) => {
         // Do we trust the sender of this message?
         if (event.origin !== "http://test.tradeasy.tech") return;
-		chart_data.push(JSON.parse(event.data));
+		    chart_data.push(JSON.parse(event.data));
+        console.log("message received");
+        console.log(event.data);
       });
     </script>
   </head>
