--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 		var chart_data=[];
       window.addEventListener("message", (event) => {
         // Do we trust the sender of this message?
-        if (event.origin !== "http://test.tradeasy.tech") return;
+        if (event.origin !== "https://test.tradeasy.tech") return;
 		    chart_data.push(JSON.parse(event.data));
         console.log("message received");
         console.log(event.data);
