--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <script src="/charting_library/charting_library.js"></script>
     <title>Charting Library React Demo</title>
     <script>
-		var chart_data=[];
+      window.chart_data = [];
       window.addEventListener("message", (event) => {
         // Do we trust the sender of this message?
         if (event.origin !== "https://test.tradeasy.tech") return;
-		    chart_data.push(JSON.parse(event.data));
+        chart_data.push(JSON.parse(event.data));
       });
     </script>
   </head>
