--- a/public/index.html
+++ b/public/index.html
@@ -5,34 +5,7 @@
     <script src="/charting_library/charting_library.js"></script>
     <title>Charting Library React Demo</title>
     <script>
-      window.chart_data = [
-        {
-          y_axix: [ "9886.00","34534"],
-          operationsDetail: [
-            {
-              tipoOP: "Venta (1 lote/s)",
-              fechaIni: "07/04/2021 07:30:00",
-              fechaFin: "07/04/2021 08:00:02",
-              Swap: "0",
-              comision: "-7",
-              precioIni: "1.37058 GBP",
-              precioFin: "1.37138 GBP",
-              OrderProf: "-80 USD",
-            },
-            {
-              tipoOP: "Compra (1 lote/s)",
-              fechaIni: "08/04/2021 08:00:02",
-              fechaFin: "08/04/2021 10:30:00",
-              Swap: "0",
-              comision: "-7",
-              precioIni: "1.37138 GBP",
-              precioFin: "1.37118 GBP",
-              OrderProf: "-20 USD",
-            },
-          ],
-          status: "P",
-        },
-      ];
+      window.chart_data = [];
       window.addEventListener("message", (event) => {
         // Do we trust the sender of this message?
         if (event.origin !== "https://test.tradeasy.tech") return;
